tests/paczka1/fuzzy1/33666068.err
Error in line 5: S664 S664 16,2
Error in line 14: 8NNJYz S886 293,3
Error in line 21: 8NNJYz S664 56,6
Error in line 2: 6UOGtLKZ6 A100 96,0
Error in line 34: 6UOGtLKZ6 S664 72,1
